unpackaged/main/default/objects/OpportunityLineItem/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Agent must align with Broker Agency</errorMessage>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <filterItems>
            <field>Contact.Agency_Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.Broker_Agency__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>