unpackaged/main/default/objects/OpportunityLineItem/fields/Changed_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Changed_Carrier__c</fullName>
    <inlineHelpText>Did the group stay with the same carrier or change carrier?</inlineHelpText>
    <label>Changed Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don’t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>