unpackaged/main/default/objects/OpportunityLineItem/fields/Closed_Lost_Total_Price_Custom__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Total_Price_Custom__c</fullName>
    <description>This field calculates the total price only for closed lost opportunity products.</description>
    <formula>Quantity *  Sales_Price_Custom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Lost Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>