unpackaged/main/default/objects/OpportunityLineItem/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Primary Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_Item_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Didn’t Pursue</fullName>
            </value>
            <value>
                <fullName>Bad Customer Experience</fullName>
            </value>
            <value>
                <fullName>Blue Lost Medical</fullName>
            </value>
            <value>
                <fullName>Blue Rep Didn&#39;t Pursue</fullName>
            </value>
            <value>
                <fullName>Broker Relationship</fullName>
            </value>
            <value>
                <fullName>Competitive Rates</fullName>
            </value>
            <value>
                <fullName>Dental Total Health / Dental XTra</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Place Coverage (with anyone)</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
            <value>
                <fullName>DTQ - Industry</fullName>
            </value>
            <value>
                <fullName>DTQ - Not Meeting Participation</fullName>
            </value>
            <value>
                <fullName>DTQ - Plan Design</fullName>
            </value>
            <value>
                <fullName>DTQ - Uncompetitive Rates</fullName>
            </value>
            <value>
                <fullName>Group Doesn&#39;t Offer Coverage</fullName>
            </value>
            <value>
                <fullName>In a Rate Guarantee</fullName>
            </value>
            <value>
                <fullName>Medical Packaging</fullName>
            </value>
            <value>
                <fullName>Missing Info to Quote</fullName>
            </value>
            <value>
                <fullName>Plan Design</fullName>
            </value>
            <value>
                <fullName>RFP Committee Decision</fullName>
            </value>
            <value>
                <fullName>Uncompetitive Offering</fullName>
            </value>
            <value>
                <fullName>Uncompetitive Rates</fullName>
            </value>
            <value>
                <fullName>Vision Only - Blue Product</fullName>
            </value>
            <value>
                <fullName>Excluded from Opportunities</fullName>
            </value>
            <value>
                <fullName>Large Group Not Out to Bid This Year</fullName>
            </value>
            <value>
                <fullName>Decline to Quote</fullName>
                <isActive>false</isActive>
                <label>Decline to Quote</label>
            </value>
            <value>
                <fullName>Not Issued</fullName>
                <isActive>false</isActive>
                <label>Not Issued</label>
            </value>
            <value>
                <fullName>Premium Paid</fullName>
                <isActive>false</isActive>
                <label>Premium Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>