unpackaged/main/default/objects/OpportunityLineItem/fields/Current_Rate_EE_CH__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_EE_CH__c</fullName>
    <description>This is the per employee per month current rate</description>
    <label>Current Rate (EE+CH)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>