unpackaged/main/default/objects/OpportunityLineItem/fields/Custom_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>