unpackaged/main/default/objects/OpportunityLineItem/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>This is the date submitted to LG Rates / Underwriting</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date submitted to LG Rates / Underwriting</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>