unpackaged/main/default/objects/OpportunityLineItem/fields/Incumbent_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Premium_Rate__c</fullName>
    <label>Incumbent Premium Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>