unpackaged/main/default/objects/OpportunityLineItem/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>