unpackaged/main/default/objects/OpportunityLineItem/fields/Line_Item_Stage__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Stage__c</fullName>
    <label>Line Item Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pursue</fullName>
                <default>true</default>
                <label>Pursue</label>
            </value>
            <value>
                <fullName>Waiting for Info</fullName>
            </value>
            <value>
                <fullName>Submitted for Quote</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost - Quoted</fullName>
            </value>
            <value>
                <fullName>Closed Lost - Not Quoted</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>