unpackaged/main/default/objects/OpportunityLineItem/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>