unpackaged/main/default/objects/OpportunityLineItem/fields/Opp_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Effective_Date__c</fullName>
    <formula>Opportunity.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp. Effective Date</label>
    <type>Date</type>
</CustomField>