unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Lock__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lock__c</fullName>
    <formula>IF( Opportunity.RecordType.Name = &#39;Lock Opportunity&#39;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Lock</label>
    <type>Checkbox</type>
</CustomField>