unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product ID - Case Safe</label>
    <type>Text</type>
</CustomField>