unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>