unpackaged/main/default/objects/OpportunityLineItem/fields/Percent_Difference_Family__c.field-meta.xml
<CustomField>
    <fullName>Percent_Difference_Family__c</fullName>
    <formula>IF (

AND(NOT(ISNULL( Renewal_Rate_Family__c )), NOT(ISNULL(Quoted_Rate_Family__c))), 
(  Quoted_Rate_Family__c  - Renewal_Rate_Family__c  )/ Renewal_Rate_Family__c  , 

IF (

AND(NOT(ISNULL( Current_Rate_Family__c )) , NOT(ISNULL(Quoted_Rate_Family__c))),
(Quoted_Rate_Family__c - Current_Rate_Family__c )/ Current_Rate_Family__c, NULL

))</formula>
    <inlineHelpText>Percent Diff b/w Quoted Rate Family and Renewal Rate Family. If no Renewal Rate Family then percent diff b/w Quoted  Rate Family and Current Rate Family. If no Renewal Rate Fam and Current Rate Fam then blanks. If there is no Quoted Rate Fam then blanks.</inlineHelpText>
    <label>Percent Difference (Family)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>