unpackaged/main/default/objects/OpportunityLineItem/fields/Quote_request_received__c.field-meta.xml
<CustomField>
    <fullName>Quote_request_received__c</fullName>
    <formula>IF(Quoted__c,&#39;Quoted&#39;,&#39;Not Quoted&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote request received</label>
    <type>Text</type>
</CustomField>