unpackaged/main/default/objects/OpportunityLineItem/fields/Quoted__c.field-meta.xml
<CustomField>
    <fullName>Quoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if line item stage is or has been &#39;quoted&#39;.</description>
    <label>Quoted</label>
    <type>Checkbox</type>
</CustomField>