unpackaged/main/default/objects/OpportunityLineItem/fields/Quoted_Rate_EE_CH__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Rate_EE_CH__c</fullName>
    <description>This is the per employee per month rate</description>
    <label>Quoted Rate (EE+CH)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>