unpackaged/main/default/objects/OpportunityLineItem/fields/Renewal_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Premium_Rate__c</fullName>
    <label>Renewal Premium Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>