unpackaged/main/default/objects/OpportunityLineItem/fields/Renewal_Rate_EE_CH__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rate_EE_CH__c</fullName>
    <description>This is the per employee per month renewal rate</description>
    <label>Renewal Rate (EE+CH)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>