unpackaged/main/default/objects/OpportunityLineItem/fields/Sales_Price_Custom__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Custom__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field holds the sales price value for closed lost total price calculation.</description>
    <label>Sales Price Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>